objects/T1807_1__c.object
<CustomObject>
    <description>updated 2</description>
    <fields>
        <fullName>Auto1__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Auto1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CHKBOX1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>updeeate2</description>
        <label>CHKBOX1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>some description</description>
        <label>Check2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TextField1__c</fullName>
        <label>TextField1</label>
        <length>123</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>picklist1__c</fullName>
        <label>picklist1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Melon</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>T1807_1</label>
    <nameField>
        <label>T1807_1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T1807_1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>